--- a/src/App/Client/GoldEx.Client/Pages/Products/Components/Editor.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Products/Components/Editor.razor
@@ -216,11 +216,11 @@
 
             <MudButton Class="m-2"
                        Color="Color.Primary"
-                       Disabled="@IsBusy"
+                       Disabled="@_processing"
                        StartIcon="@Icons.Material.Filled.Save"
                        OnClick="@(async () => await Submit())"
                        Variant="Variant.Filled">
-                @if (IsBusy)
+                @if (_processing)
                 {
                     <MudProgressCircular Class="ms-n1"
                                          Size="Size.Small"
