--- a/src/App/Client/GoldEx.Client/Pages/Settings/CategoriesList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/CategoriesList.razor
@@ -19,7 +19,7 @@
 </div>
 <MudDivider Class="my-2" />
 
-<MudTable T="ProductCategoryVm" Hover="true" FixedHeader="true" Dense="true" Items="_productCategories"
+<MudTable T="ProductCategoryVm" Hover="true" FixedHeader="true" Dense="true" Items="_productCategories" Loading="_processing"
           SelectOnRowClick="false" Breakpoint="Breakpoint.Xs" Elevation="24" Height="350px">
     <HeaderContent>
         <MudTh>ردیف</MudTh>
