--- a/src/App/Client/GoldEx.Client/Pages/Settings/PaymentMethods.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/PaymentMethods.razor
@@ -18,7 +18,7 @@
 </div>
 <MudDivider Class="my-2" />
 
-<MudTable T="PaymentMethodVm" Hover="true" FixedHeader="true" Dense="true" Items="_paymentMethods"
+<MudTable T="PaymentMethodVm" Hover="true" FixedHeader="true" Dense="true" Items="_paymentMethods" Loading="_processing"
           SelectOnRowClick="false" Breakpoint="Breakpoint.Xs" Elevation="24" Height="350px">
     <HeaderContent>
         <MudTh>ردیف</MudTh>
