--- a/src/App/Client/GoldEx.Client/Pages/Settings/ReportsList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Settings/ReportsList.razor
@@ -11,7 +11,7 @@
 </div>
 <MudDivider Class="my-2" />
 
-<MudTable T="GetReportResponse" Hover="true" FixedHeader="true" Dense="true" Items="_reports"
+<MudTable T="GetReportResponse" Hover="true" FixedHeader="true" Dense="true" Items="_reports" Loading="_processing"
           SelectOnRowClick="false" Breakpoint="Breakpoint.Xs" Elevation="24" Height="350px">
     <HeaderContent>
         <MudTh>نام</MudTh>
