--- a/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/Components/EditorForm.razor
@@ -6,7 +6,38 @@
 <MudCard Class="p-4" Elevation="24">
     <MudForm Model="_model" @ref="@_form" Validation="@(_invoiceValidator.ValidateValue)" ValidationDelay="0">
         <MudStack Row AlignItems="AlignItems.End">
-            <MudText Typo="Typo.h6" GutterBottom="true">اطلاعات فاکتور</MudText>
+            <MudText Typo="Typo.h6" GutterBottom="true">
+                اطلاعات فاکتور
+                @if (Id.HasValue)
+                {
+                    Color color;
+                    string text;
+
+                    if (_model.IsPaid)
+                    {
+                        color = Color.Success;
+                        text = "تسویه حساب شده";
+                    }
+                    else
+                    {
+                        if (_model.IsOverdue)
+                        {
+                            color = Color.Error;
+                            text = "موعد سررسید گذشته";
+                        }
+                        else
+                        {
+                            color = Color.Primary;
+                            text = "دارای بدهی";
+                        }
+                    }
+
+                    <MudChip T="string" Color="@color" Variant="Variant.Filled" Size="Size.Small">@text</MudChip>
+                }
+            </MudText>
+            
+            
+
             <MudSpacer />
             <MudSelect T="GetPriceUnitTitleResponse?"
                        Value="_model.InvoicePriceUnit"
