Show Customer’s invoice in customer panel

--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
@@ -33,6 +33,10 @@
                     <MudIconButton Icon="@Icons.Material.Filled.DocumentScanner" Size="Size.Small" Variant="Variant.Filled"
                                    Color="Color.Success" OnClick="_ => OnViewTransaction(context)"></MudIconButton>
                 </MudTooltip>
+                <MudTooltip Text="مشاهده فاکتورهای مشتری">
+                    <MudIconButton Icon="@Icons.Material.Filled.LibraryBooks" Size="Size.Small" Variant="Variant.Filled"
+                                   Color="Color.Info" OnClick="_ => OnViewInvoices(context)"></MudIconButton>
+                </MudTooltip>
                 <MudTooltip Text="ویرایش">
                     <MudIconButton Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Variant="Variant.Filled"
                                    Color="Color.Primary" OnClick="_ => OnEdit(context)"></MudIconButton>
