--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -48,7 +48,7 @@
                 <MudTabPanel Text="اسناد حسابداری" Icon="@Icons.Material.Filled.DocumentScanner">
                     <TransactionsList Class="mt-5" Elevation="24" />
                 </MudTabPanel>
-                <MudTabPanel Text="فاکتورهای من" Icon="@Icons.Material.Filled.AutoStories">
+                <MudTabPanel Text="فاکتورهای من" Icon="@Icons.Material.Filled.LibraryBooks">
                     <InvoicesList Class="mt-5" Elevation="24" />
                 </MudTabPanel>
                 <MudTabPanel Text="گزارش گیری"></MudTabPanel>
