--- a/src/App/Client/GoldEx.Client/Pages/Invoices/SetInvoice.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Invoices/SetInvoice.razor
@@ -14,6 +14,6 @@
         </SeparatorTemplate>
     </MudBreadcrumbs>
 
-    <EditorForm Id="IdValue" />
+    <EditorForm Id="IdValue" CustomerId="CustomerId" />
 
 </MudContainer>
