--- a/src/App/Client/GoldEx.Client.Components/Layouts/Components/AppBar.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/Components/AppBar.razor
@@ -1,4 +1,5 @@
-﻿<MudAppBar Elevation="1" Dense="true">
+﻿@using GoldEx.Shared.Services.Abstractions
+<MudAppBar Elevation="1" Dense="true">
     <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@DrawerToggle" />
     <MudImage Src="/assets/logo/logo512.png" Alt="گلدکس" Height="32" Class="ml-3 mr-2" /> <MudText Typo="Typo.h5">گلدکس</MudText>
     <MudSpacer />
