--- a/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
@@ -1,4 +1,7 @@
-﻿@using GoldEx.Client.Components.Services
+﻿@using GoldEx.Client.Abstractions.Common
+@using GoldEx.Client.Components.Services
+@using GoldEx.Shared.Services.Abstractions
+@using Microsoft.JSInterop
 @inherits LayoutComponentBase
 
 <PageTitle>گلدکس</PageTitle>
@@ -109,10 +112,20 @@
             }
         };
 
+    private static ISnackbar? _staticToastService;
+
     public bool IsDarkMode { get; set; }
 
     [Inject] private IThemeService? ThemeService { get; set; }
     [Inject] private ILocalStorageService LocalStorage { get; set; } = default!;
+    [Inject] private ISnackbar ToastService { get; set; } = default!;
+
+    protected override void OnInitialized()
+    {
+        _staticToastService = ToastService;
+
+        base.OnInitialized();
+    }
 
     protected override async Task OnInitializedAsync()
     {
@@ -156,5 +169,16 @@
         IsDarkMode = isDarkMode;
         LocalStorage.SetItemAsStringAsync("IsDarkMode", IsDarkMode.ToString());
         StateHasChanged();
+    }
+
+    [JSInvokable]
+    public static Task OnServiceWorkerInstalling()
+    {
+        if (_staticToastService is not null)
+        {
+            _ = _staticToastService.Add("درحال دریافت و نصب نسخه جدید...", Severity.Info);
+        }
+
+        return Task.CompletedTask;
     }
 }
