--- a/src/App/Server/GoldEx.Server/Components/App.razor
+++ b/src/App/Server/GoldEx.Server/Components/App.razor
@@ -30,7 +30,9 @@
 
     <script src=@Assets["_framework/blazor.web.js"]></script>
     <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+
+    <script src=@Assets["sw-events.js"]></script>
+    <script>swEvents.startListening();</script>
 </body>
 
 </html>
